terraform/ec2.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "Allow Access for SSH and Jenkins"
  vpc_id = aws_vpc.main.id 
  
  ingress {
    description      = "SHH access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    ingress {
    description      = "Jenkins port"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "sg-${local.name_prefix}"

  }
}





resource "aws_instance" "ec2-instance" {
  
 for_each = toset(["Jenkins-master", "build-slave", "ansible"])
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id = aws_subnet.public_subnet["0"].id
  key_name = var.key_pair_name
  vpc_security_group_ids = [aws_security_group.demo-sg.id]




    #  # Only apply script to the ansible instance
    user_data = each.key == "ansible" ? "./install_ansible.sh" : null 
     Name = "${each.key}-${local.name_prefix}"
   }
}
